# tenderscope-kg

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  ci_regression_analysis.json  pyproject.toml  railway.toml
.github/workflows/: quality-gate.yml
docs/: CI.md
docs/architecture/: architectural-stress-test.md  architecture-readiness-review.md  company-identity-contract.md  engineset-health-checks.md  entity-validation-impact-analysis.md  final-architectural-roadmap.md  final-engineering-readiness-review.md  integration-compatibility-validation.md  phase2-canonical-entity-graph-review.md  phase3-implementation-plan.md  production-validation-go-no-go.md
migrations/: 002_graph_schema_pg.sql
scripts/: _check_dba2.py  _check_dba3.py  _check_dba_names.py  _check_migration_progress.py  _dba_name_probe.py  _get_columns.py  _graph_audit.py  _integration_audit.py  _preflight.py  _probe.py  _probe_put_entity.py  _prod_state_check.py  _prod_state_check2.py  _prod_state_check3.py  _staging_demo.py  _standalone_analysis.py  _startup_timing.py  ci_report_summary.py  ci_summary.py  prototype_graph_confidence.py  reimport_identity.py  run_permits_batches.py  smoke_test_pg.py  verify_identity.py
tests/: test_bc_scraper_pg_importer.py  test_biz_importers.py  test_biz_repository.py  test_buyer_intelligence.py  test_company_intelligence.py  test_executive_decision.py  test_indexer_and_query.py  test_integration_audit.py  test_js_parser.py  test_opportunity_intelligence.py  test_python_parser.py  test_relationship_intelligence.py  test_rest_server.py  test_sql_parser.py
(+50 files in other folders)
