[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tenderscope-kg"
version = "0.1.0"
description = "Local Knowledge Graph & Context Engine with MCP tools for AI coding agents"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.9.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-sql>=0.3.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "tiktoken>=0.7.0",
    "pathspec>=0.12.0",
    "toml>=0.10.2",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev      = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]
postgres = ["psycopg2-binary>=2.9"]  # kept for backward compat; also in core deps
rest     = ["fastapi>=0.115.0", "uvicorn[standard]>=0.32.0"]

[project.scripts]
tkg = "tenderscope_kg.cli:main"
tkg-mcp = "tenderscope_kg.mcp_server:run"

[tool.hatch.build.targets.wheel]
packages = ["src/tenderscope_kg"]

[tool.hatch.build]
sources = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
